# VF_Finder

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  VF  ViewFactor.cpp  cmake_install.cmake  functions.h  psuedo_project.txt  sample.msh
