
cmake_minimum_required(VERSION 3.13)
FIND_PACKAGE(embree 3.0 REQUIRED)
find_package(MPI REQUIRED)
ADD_EXECUTABLE(VF ~/embree/kernels/embree.rc ViewFactor.cpp functions.h)
##target_link_libraries(VF ${MPI_LIBRARIES})
add_subdirectory(MshIO)
target_link_libraries(VF openmpi/lib)
target_include_directories(VF openmpi/include)
target_link_libraries(VF mshio::mshio)
TARGET_LINK_LIBRARIES(VF embree)
TARGET_INCLUDE_DIRECTORIES(VF PRIVATE ${PROJECT_SOURCE_DIR})